--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -1,63 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
 <device name="Android">
     <item name="none">0</item>
-    <item name="screen.on">520</item>
-    <item name="screen.full">720</item>
-    <item name="bluetooth.active">150</item>
-    <item name="bluetooth.on">1</item>
-    <item name="wifi.on">1</item>
-    <item name="wifi.active">150</item>
-    <item name="wifi.scan">200</item>
-    <item name="dsp.audio">150</item>
-    <item name="dsp.video">200</item>
-    <item name="camera.flashlight">200</item>
-    <item name="camera.avg">500</item>
-    <item name="gps.on">100</item>
-    <item name="radio.active">200</item>
-    <item name="radio.scanning">10</item>
+    <item name="screen.on">191</item>
+    <item name="screen.full">779.2</item>
+    <item name="bluetooth.active">119.73</item>
+    <item name="bluetooth.on">0.9</item>
+    <item name="wifi.on">1.5</item>
+    <item name="wifi.active">54.53</item>
+    <item name="wifi.scan">83.7</item>
+    <item name="dsp.audio">50</item>
+    <item name="dsp.video">100</item>
+    <item name="camera.avg">519.25</item>
+    <item name="camera.flashlight">0.01</item>
+    <item name="radio.active">0.01</item>
+    <item name="radio.scanning">0.01</item>
+    <item name="gps.on">43.55</item>
     <array name="radio.on">
-        <value>2</value>
-        <value>1</value>
+        <value>0.01</value>
+        <value>0.01</value>
     </array>
-    <item name="modem.controller.idle">0</item>
-    <item name="modem.controller.rx">0</item>
-    <item name="modem.controller.tx">0</item>
-    <item name="modem.controller.voltage">0</item>
-    <array name="cpu.clusters.cores">
-        <value>1</value>
-        <value>2</value>
-        <value>4</value>
+    <array name="cpu.speeds">
+        <value>600000</value>
+        <value>624000</value>
+        <value>741000</value>
+        <value>871000</value>
+        <value>1050000</value>
+        <value>1133000</value>
+        <value>1216000</value>
+        <value>1300000</value>
     </array>
-    <array name="cpu.speeds.cluster0">
-        <value>350000</value>
-        <value>400000</value>
-        <value>700000</value>
-        <value>920000</value>
-        <value>1200000</value>
+    <item name="cpu.idle">12.05</item>
+    <item name="cpu.awake">28.61</item>
+    <array name="cpu.active">
+        <value>100.75</value>
+        <value>105.26</value>
+        <value>118.77</value>
+        <value>133.16</value>
+        <value>151.63</value>
+        <value>162.42</value>
+        <value>176.41</value>
+        <value>189.76</value>
     </array>
-    <array name="cpu.active.cluster0">
-        <value>66.6</value>
-        <value>84</value>
-        <value>96</value>
-        <value>105</value>
-        <value>117.3</value>
-        <value>123.6</value>
-    </array>
-    <item name="cpu.idle">7</item>
-    <array name="memory.bandwidths">
-        <value>22.7</value>
-    </array>
-    <item name="battery.capacity">3000</item>
-    <item name="wifi.controller.idle">0</item>
-    <item name="wifi.controller.rx">0</item>
-    <item name="wifi.controller.tx">0</item>
-    <array name="wifi.controller.tx_levels" />
-    <item name="wifi.controller.voltage">0</item>
+    <item name="battery.capacity">7280</item>
     <array name="wifi.batchedscan">
-        <value>2</value>
-        <value>4</value>
-        <value>6</value>
-        <value>8</value>
-        <value>10</value>
+        <value>.0084</value>
+        <value>.0680</value>
+        <value>.5373</value>
+        <value>4.292</value>
+        <value>34.33</value>
     </array>
 </device>
